Thu 14 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update urls for script, widget and api (scrolliris.com)

Sun 12 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Update font config (remove typekit, async loader)

Sat 11 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Refactor site application actions
	* Update npm packages (file-loader, styr)
	* Fix logo file name path

Thu 09 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Enter pyramid_secure_response (ssl redirect, HSTS Header)

Mon 09 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Change urls for badge (as `img.scrolliris.io`)
	* Add a note for license

Tue 03 Oct 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add changelog link

Wed 16 Aug 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial import