@@ -23,6 +23,6 @@ TEST_SESSION_PASSWORD=""
 TEST_SESSION_COOKIE_DOMAIN=".example.org"
 TEST_DATASTORE_EMULATOR_HOST="localhost:8432"
 TEST_DATASTORE_PROJECT_ID="example-test-id"
-TEST_STORAGE_BUCKET_HOST="cdn.example.com"
-TEST_STORAGE_BUCKET_NAME="example.org"
-TEST_STORAGE_BUCKET_PATH="/v1/static"
+TEST_BUCKET_HOST="cdn.example.com"
+TEST_BUCKET_NAME="org.example"
+TEST_BUCKET_PATH="/v1/static"
