@@ -36,10 +36,10 @@ SESSION_COOKIE_DOMAIN=".example.org"
 ## [datastore]
 DATASTORE_EMULATOR_HOST="localhost:8432"
 DATASTORE_PROJECT_ID="aarau-development"
-## [storage]
-STORAGE_BUCKET_HOST="cdn.example.com"
-STORAGE_BUCKET_NAME="example.org"
-STORAGE_BUCKET_PATH="/v1/static"
+## [bucket]
+BUCKET_HOST="cdn.example.com"
+BUCKET_NAME="org.example"
+BUCKET_PATH="/v1/static"
 
 # -- test
 ## [global]
@@ -73,7 +73,7 @@ TEST_SESSION_COOKIE_DOMAIN=".example.org"
 ## [datastore]
 TEST_DATASTORE_EMULATOR_HOST="localhost:8432"
 TEST_DATASTORE_PROJECT_ID="example-test-id"
-## [storage]
-TEST_STORAGE_BUCKET_HOST="cdn.example.com"
-TEST_STORAGE_BUCKET_NAME="example.org"
-TEST_STORAGE_BUCKET_PATH="/v1/static"
+## [bucket]
+TEST_BUCKET_HOST="cdn.example.com"
+TEST_BUCKET_NAME="org.example"
+TEST_BUCKET_PATH="/v1/static"
