@@ -64,9 +64,9 @@ class Env():
             'wsgi.auth_credentials': 'WSGI_AUTH_CREDENTIALS',
             'datastore.emulator_host': 'DATASTORE_EMULATOR_HOST',
             'datastore.project_id': 'DATASTORE_PROJECT_ID',
-            'storage.bucket_host': 'STORAGE_BUCKET_HOST',
-            'storage.bucket_name': 'STORAGE_BUCKET_NAME',
-            'storage.bucket_path': 'STORAGE_BUCKET_PATH',
+            'bucket.host': 'BUCKET_HOST',
+            'bucket.name': 'BUCKET_NAME',
+            'bucket.path': 'BUCKET_PATH',
             # deployment
             'google_cloud.project': 'GOOGLE_CLOUD_PROJECT',
         }
