@@ -101,10 +101,10 @@ wsgi.auth_credentials =
 datastore.emulator_host =
 datastore.project_id =
 
-# -- storage
-storage.bucket_host =
-storage.bucket_name =
-storage.bucket_path =
+# -- bucket (static)
+bucket.host =
+bucket.name =
+bucket.path =
 
 
 ###
