@@ -1,4 +1,5 @@
 Thu 14 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Update env var names for bucket static url (cdn)
 	* Update urls for script, widget and api (scrolliris.com)
 
 Sun 12 Nov 2017 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
